--- a/src/components/edit-window/edit-window.scss
+++ b/src/components/edit-window/edit-window.scss
@@ -7,12 +7,15 @@
         right: 0;
         bottom: 0;
         left: 0;
-        display: flex;
         justify-content: center;
         outline: none;
         min-width: $m-min-width;
         overflow: hidden;
         background: $m-color--grey-lightest;
+
+        &:not(.m--is-android) {
+            display: flex;
+        }
 
         &.m--is-enter-active,
         &.m--is-leave-active {
@@ -52,7 +55,6 @@
     &__article {
         transform: translate3d(0, 0, 0);
         cursor: auto;
-        display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
@@ -60,6 +62,10 @@
         margin: 0 auto;
         background: $m-color--white;
         box-shadow: $m-box-shadow;
+
+        &:not(.m--is-android) {
+            display: flex;
+        }
 
         > header,
         > footer {
