MODUL-486 Ajout d'un cas de test
Cas de test pour la valeur par défaut de la case à cocher « Ouvrir dans un nouvel onglet » lors de la l'ajout d'un lien externe.

--- a/src/components/rich-text-editor/rich-text-editor.sandbox.html
+++ b/src/components/rich-text-editor/rich-text-editor.sandbox.html
@@ -82,9 +82,9 @@
         :waiting="waiting"
         :disabled="disabled"></m-rich-text-editor>
     </div>
-    <h5 class="m-u--margin-bottom">Ouvrir dans une nouvelle fenêtre est coché par défaut dans la modale d'insertion de lien</h5>
+    <h5 class="m-u--margin-bottom">Tests de la case à cocher « Ouvrir dans un nouvel onglet » d'un lien externe</h5>
     <div class="m-u--margin-bottom">
-        <m-rich-text-editor v-model="model"
+        <m-rich-text-editor v-model="linksOpenInNewWindowModel"
         :toolbar-sticky-offset="58"
         :label="'texte riche'"
         :max-width="'large'"
