--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,21 +1,23 @@
-// ======================================================================
-//  Titles
-// ======================================================================
+.m-u--app-body {
+    // ======================================================================
+    //  Titles
+    // ======================================================================
 
-@include titleStyles();
+    @include titleStyles();
 
-// ======================================================================
-//  Text
-// ======================================================================
+    // ======================================================================
+    //  Text
+    // ======================================================================
 
-@include textStyles();
+    @include textStyles();
 
-// ======================================================================
-//  Link
-// ======================================================================
-a {
-    color: $m-color--interactive;
-    font-family: $m-font-family;
+    // ======================================================================
+    //  Link
+    // ======================================================================
+    a {
+        color: $m-color--interactive;
+        font-family: $m-font-family;
+    }
 }
 
 // ======================================================================
