MODUL-496 - add style to fix ios flex problem

--- a/src/components/limit-text/limit-text.scss
+++ b/src/components/limit-text/limit-text.scss
@@ -1,6 +1,8 @@
 @import '../../styles/abstracts/variables';
 
 .m-limit-text {
+    text-size-adjust: 100%;
+
     &__content,
     &__original {
         & > :first-child {
