Remove prop title

--- a/src/components/dialog/dialog.html
+++ b/src/components/dialog/dialog.html
@@ -19,8 +19,8 @@
                                     'm--no-padding': !padding || !paddingHeader }">
                         <h2 v-if="hasTitle">{{ title }}</h2>
                         <slot name="header"></slot>
-                        <m-icon-button @click="closeDialog()" icon-name="m-svg__close-clear" skin="dark" class="m-dialog__header__close-button" :title="propCloseTitle">
-                            <m-i18n :k="propCloseTitle"></m-i18n>
+                        <m-icon-button @click="closeDialog()" icon-name="m-svg__close-clear" skin="dark" class="m-dialog__header__close-button" :title="closeTitle">
+                            <m-i18n :k="closeTitle"></m-i18n>
                         </m-icon-button>
                     </header>
                     <div class="m-dialog__body" ref="body"
