--- a/src/components/dialog/dialog.html
+++ b/src/components/dialog/dialog.html
@@ -19,9 +19,7 @@
                                     'm--no-padding': !padding || !paddingHeader }">
                         <h2 v-if="hasTitle">{{ title }}</h2>
                         <slot name="header"></slot>
-                        <m-icon-button @click="closeDialog()" icon-name="m-svg__close-clear" skin="dark" class="m-dialog__header__close-button" :title="closeTitle">
-                            {{ closeTitle }}
-                        </m-icon-button>
+                        <m-icon-button @click="closeDialog()" icon-name="m-svg__close-clear" skin="dark" class="m-dialog__header__close-button" :title="closeTitle"></m-icon-button>
                     </header>
                     <div class="m-dialog__body" ref="body"
                          :class="{ 'm--no-padding': !padding || !paddingBody }" v-if="hasDefaultSlot">
