--- a/src/components/edit-window/edit-window.sandbox.html
+++ b/src/components/edit-window/edit-window.sandbox.html
@@ -10,6 +10,9 @@
         <h2 slot="header" style="margin:0;">Titre</h2>
 
         <input type="text" class="m-u--margin-bottom">
+        <input type="text" class="m-u--margin-bottom">
+        <input type="text" class="m-u--margin-bottom">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
 
         <p style="margin:0;">Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
             elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
@@ -29,6 +32,9 @@
         <h2 slot="header" style="margin:0;">Titre</h2>
 
         <input type="text" class="m-u--margin-bottom">
+        <input type="text" class="m-u--margin-bottom">
+        <input type="text" class="m-u--margin-bottom">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
 
         <p style="margin:0;">Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
             elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
@@ -55,5 +61,39 @@
             elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
             tempor in in nostrud reprehenderit minim culpa incididunt.</p>
     </m-edit-window>
+
+    <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+        elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+        tempor in in nostrud reprehenderit minim culpa incididunt.</p>
+    <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+        elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+        tempor in in nostrud reprehenderit minim culpa incididunt.</p>
+    <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+        elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+        tempor in in nostrud reprehenderit minim culpa incididunt.</p>        <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+            elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+            tempor in in nostrud reprehenderit minim culpa incididunt.</p>
+        <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+            elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+            tempor in in nostrud reprehenderit minim culpa incididunt.</p>
+        <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+            elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+            tempor in in nostrud reprehenderit minim culpa incididunt.</p>        <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+                elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+                tempor in in nostrud reprehenderit minim culpa incididunt.</p>
+            <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+                elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+                tempor in in nostrud reprehenderit minim culpa incididunt.</p>
+            <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+                elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+                tempor in in nostrud reprehenderit minim culpa incididunt.</p>        <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+                    elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+                    tempor in in nostrud reprehenderit minim culpa incididunt.</p>
+                <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+                    elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+                    tempor in in nostrud reprehenderit minim culpa incididunt.</p>
+                <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
+                    elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
+                    tempor in in nostrud reprehenderit minim culpa incididunt.</p>
 
 </div>
