change edit-window component to overlay (name/references/filenames...)

--- a/src/components/edit-window/overlay.sandbox.html
+++ b/src/components/edit-window/overlay.sandbox.html
@@ -1,11 +1,11 @@
 <div>
     <!-- Sandbox template -->
-    <h3>Edit-window</h3>
+    <h3>overlay</h3>
     <p class="m-u--margin-bottom">
         basic demo
     </p>
     <div>
-        <m-edit-window title="Titre">
+        <m-overlay title="Titre">
             <m-button slot="trigger">Ouvrir</m-button>
             <h2 slot="header" style="margin:0;">Titre</h2>
             <p style="margin:0;">Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
@@ -14,14 +14,14 @@
             <p>Consectetur dolore commodo voluptate est laborum ex nulla. Amet nisi quis minim dolor voluptate est nisi anim
                 elit duis enim. Sint veniam tempor occaecat irure nostrud eiusmod. Fugiat nostrud laborum pariatur dolor
                 tempor in in nostrud reprehenderit minim culpa incididunt.</p>
-        </m-edit-window>
+        </m-overlay>
     </div>
 
     <p class="m-u--margin-bottom">
         long text demo
     </p>
     <div>
-        <m-edit-window title="Titre">
+        <m-overlay title="Titre">
             <m-button slot="trigger">Ouvrir</m-button>
             <h2 slot="header" style="margin:0;">Titre</h2>
             <p style="margin:0;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum magni perspiciatis, facilis optio enim maiores animi et odit recusandae est suscipit culpa nostrum, iusto iste, saepe ipsa delectus corporis aliquam?
@@ -54,6 +54,6 @@
             Aliquid, neque. Odit officiis ipsum dignissimos id, inventore cupiditate harum nostrum numquam incidunt nihil, quam nulla quis officia facilis dolorem nisi. Ducimus, aperiam quibusdam dolore nulla ipsam earum nostrum velit!
             Voluptatibus esse facilis ratione id fugit itaque facere voluptate odit, rerum quidem voluptas eligendi, blanditiis unde voluptates commodi ad dolor dicta quas hic. Incidunt modi accusamus tempore esse, est qui.
             Veniam ipsum qui, in repellendus quis dicta dolore ratione nemo fuga, laborum maiores quidem officiis iusto distinctio, cumque facere adipisci accusamus numquam! Porro eos veniam temporibus nisi. Error, quas ab!</p>
-        </m-edit-window>
+        </m-overlay>
     </div>
 </div>
