--- a/src/components/rich-text-editor/rich-text-editor.sandbox.html
+++ b/src/components/rich-text-editor/rich-text-editor.sandbox.html
@@ -56,17 +56,17 @@
     <div>
         <h5 class="m-u--margin-bottom">fonctionne dans un formulaire pleine page</h5>
         <button @click="afficherFormulairePleinePage = !afficherFormulairePleinePage">Afficher formulaire pleine page</button>
-        <m-edit-window :open.sync="afficherFormulairePleinePage">
+        <m-overlay :open.sync="afficherFormulairePleinePage">
             <template slot="header">
                 <span class="m-u--h2 m-u--font-weight--bold">
                     <m-i18n k="texte:texte"></m-i18n>
                 </span>
             </template>
             <div>
-                <m-rich-text-editor scrollable-container=".m-edit-window__body" class="p-formulaire-texte__textearea" :label="'texte riche'"
+                <m-rich-text-editor scrollable-container=".m-overlay__body" class="p-formulaire-texte__textearea" :label="'texte riche'"
                     tag-style="p" max-width="720px" v-model="fullScreenFormModel"></m-rich-text-editor>
             </div>
-        </m-edit-window>
+        </m-overlay>
     </div>
     <h5 class="m-u--margin-bottom">placeholder vide n'affiche rien</h5>
     <div class="m-u--margin-bottom">
