--- a/src/components/edit-window/edit-window.html
+++ b/src/components/edit-window/edit-window.html
@@ -17,7 +17,7 @@
                             <slot name="header-right"></slot>
                         </div>
                     </header>
-                    <div class="m-edit-window__body" ref="body"
+                    <div class="m-edit-window__body" ref="body" @focusin="handleFooter" @focusout="handleFooter"
                          :class="{ 'm--no-padding': !padding || !paddingBody }">
                         <slot></slot>
                     </div>
