--- a/src/components/error-browser-not-supported/error-browser-not-supported.sandbox.html
+++ b/src/components/error-browser-not-supported/error-browser-not-supported.sandbox.html
@@ -29,7 +29,7 @@
 
     <h5>Unexpected error popup</h5>
     <m-button v-m-popup:errorpopup>pop me an error</m-button>
-    <m-modal ref="errorpopup" :negativeLink="false" ok-label="Fermer">
+    <m-temp-name ref="errorpopup" :negativeLink="false" ok-label="Fermer">
             <m-error-browser-not-supported ></m-error-browser-not-supported>
-    </m-modal>
+    </m-temp-name>
 </div>
