rename dialog to modal (files/refs/paths etc..)

--- a/src/components/overlay/overlay.html
+++ b/src/components/overlay/overlay.html
@@ -5,7 +5,7 @@
             <div class="m-overlay__wrap"
                  :class="[{ 'm--is-disabled':disabled },
                             className ]"
-                 ref="dialogWrap"
+                 ref="modalWrap"
                  v-show="propOpen" v-if="portalMounted">
                 <section class="m-overlay__article" ref="article">
                     <header class="m-overlay__header"
