--- a/src/components/temp-name/temp-name.html
+++ b/src/components/temp-name/temp-name.html
@@ -6,7 +6,7 @@
                     :class="[{ 'm--is-disabled': disabled }, className ]"
                     v-show="propOpen"
                     v-if="portalMounted"
-                    ref="dialogWrap">
+                    ref="modalWrap">
                 <article class="m-temp-name__article"
                             :class="{ 'm--has-width-large': hasWidthLarge }"
                             ref="article">
