--- a/src/components/dialog/modal.html
+++ b/src/components/dialog/modal.html
@@ -1,9 +1,9 @@
-<div class="m-dialog" ref="baseWindow">
+<div class="m-modal" ref="baseWindow">
     <slot name="trigger"></slot>
     <portal :target-el="portalTargetSelector" v-if="portalCreated">
         <transition name="m--is">
             <div v-show="propOpen" v-if="portalMounted"
-                 class="m-dialog__wrap m--is-dialog"
+                 class="m-modal__wrap m--is-modal"
                  :class="[{ 'm--is-small': sizeSmall,
                             'm--is-large': sizeLarge,
                             'm--is-full-screen': sizeFullSceen,
@@ -11,21 +11,21 @@
                             'm--is-close-on-backdrop': closeOnBackdrop,
                             'm--is-disabled':disabled }, className ]"
                  @click.self="backdropClick()"
-                 ref="dialogWrap">
-                <article class="m-dialog__article" ref="article">
-                    <header class="m-dialog__header"
+                 ref="modalWrap">
+                <article class="m-modal__article" ref="article">
+                    <header class="m-modal__header"
                             :class="{ 'm--has-title': hasTitle,
                                     'm--has-content': hasHeader,
                                     'm--no-padding': !padding || !paddingHeader }">
                         <h2 v-if="hasTitle">{{ title }}</h2>
                         <slot name="header"></slot>
-                        <m-icon-button @click="closeDialog()" icon-name="m-svg__close-clear" skin="dark" class="m-dialog__header__close-button" :title="closeTitle"></m-icon-button>
+                        <m-icon-button @click="closeModal()" icon-name="m-svg__close-clear" skin="dark" class="m-modal__header__close-button" :title="closeTitle"></m-icon-button>
                     </header>
-                    <div class="m-dialog__body" ref="body"
+                    <div class="m-modal__body" ref="body"
                          :class="{ 'm--no-padding': !padding || !paddingBody }" v-if="hasDefaultSlot">
                         <slot></slot>
                     </div>
-                    <footer class="m-dialog__footer"
+                    <footer class="m-modal__footer"
                             :class="{ 'm--no-padding': !padding || !paddingFooter }"
                             v-if="hasFooterSlot">
                         <div>
