--- a/src/components/dialog/modal.sandbox.html
+++ b/src/components/dialog/modal.sandbox.html
@@ -1,16 +1,16 @@
 <div>
     <!-- Sandbox template -->
-    <h3>Trigger the dialog</h3>
+    <h3>Trigger the modal</h3>
     <p class="m-u--margin-bottom">Basic demo</p>
-    <m-dialog title="Dialog title">
-        <m-button slot="trigger">Open the dialog</m-button>
+    <m-modal title="Modal title">
+        <m-button slot="trigger">Open the modal</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere, velit? Temporibus et ipsa, voluptatibus cum, ducimus rerum ex officia minima culpa maiores architecto tempore aut, consequuntur consectetur possimus tempora recusandae!
         <div slot="footer">Footer</div>
-    </m-dialog>
+    </m-modal>
 
     <p class="m-u--margin-bottom">Long text demo</p>
-    <m-dialog title="Dialog title">
-        <m-button slot="trigger">Open the dialog</m-button>
+    <m-modal title="Modal title">
+        <m-button slot="trigger">Open the modal</m-button>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit magnam maiores rerum tenetur omnis! Laudantium aliquid necessitatibus cupiditate perspiciatis error recusandae nostrum, odit doloribus repudiandae. Saepe mollitia sint magni possimus.
         Placeat sapiente aperiam nihil, veniam quas enim et quos, aut a odio alias dolor qui ad. Fugiat fugit dolore autem deleniti qui explicabo, consequatur tempore quas debitis repudiandae provident ex.
         Minima aspernatur labore at laudantium pariatur rerum debitis dolore. Quidem modi nesciunt fuga iure eaque illo, facere reprehenderit, cupiditate, ex ab aperiam porro optio hic delectus in ad rem aliquid.
@@ -32,5 +32,5 @@
         Suscipit, eos excepturi possimus alias asperiores laudantium repudiandae! Deleniti explicabo nesciunt, ut reprehenderit minus omnis commodi mollitia sapiente, quod iste at dolorum, animi adipisci maiores voluptas dolores cum dolor est!
         Voluptate fuga alias repellat tenetur! Vero numquam iure sapiente sunt corrupti id officiis consequatur quod illum ipsam voluptate harum veritatis sequi molestiae esse, ipsum maxime a, beatae aspernatur nemo laudantium.
         <div slot="footer">Pied de page</div>
-    </m-dialog>
+    </m-modal>
 </div>
