--- a/src/components/dialog/modal.scss
+++ b/src/components/dialog/modal.scss
@@ -1,9 +1,9 @@
 @import '../../styles/abstracts/variables';
-$m-dialog--max-width--l: $m-max-width !default;
-$m-dialog--max-width: 600px !default;
-$m-dialog--max-width--s: 420px !default;
+$m-modal--max-width--l: $m-max-width !default;
+$m-modal--max-width: 600px !default;
+$m-modal--max-width--s: 420px !default;
 
-.m-dialog {
+.m-modal {
     &__wrap {
         position: fixed;
         top: 0;
@@ -58,14 +58,14 @@ $m-dialog--max-width--s: 420px !default;
         &.m--is-enter,
         &.m--is-leave-to {
             &:not(.m--is-full-screen) {
-                .m-dialog__article {
+                .m-modal__article {
                     transform: translate3d(0, $m-padding--l, 0) scale(0.98);
                     opacity: 0;
                 }
             }
 
             &.m--is-full-screen {
-                .m-dialog__article {
+                .m-modal__article {
                     transform: translate3d(0, 110%, 0);
                 }
             }
@@ -74,17 +74,17 @@ $m-dialog--max-width--s: 420px !default;
         &:not(.m--is-full-screen) {
             padding: $m-padding--l $m-padding--l 0 $m-padding--l;
 
-            .m-dialog__article {
+            .m-modal__article {
                 transition: transform $m-transition-duration ease, opacity $m-transition-duration--s linear;
                 margin-top: auto;
                 margin-bottom: auto;
-                max-width: $m-dialog--max-width;
+                max-width: $m-modal--max-width;
                 transform: translate3d(0, 0, 0);
             }
         }
 
         &.m--is-full-screen {
-            .m-dialog__article {
+            .m-modal__article {
                 transition: transform $m-transition-duration--xl ease;
                 position: absolute;
                 top: 0;
@@ -94,19 +94,19 @@ $m-dialog--max-width--s: 420px !default;
         }
 
         &.m--is-large {
-            .m-dialog__article {
-                max-width: $m-dialog--max-width--l;
+            .m-modal__article {
+                max-width: $m-modal--max-width--l;
             }
         }
 
         &.m--is-small {
-            .m-dialog__article {
-                max-width: $m-dialog--max-width--s;
+            .m-modal__article {
+                max-width: $m-modal--max-width--s;
             }
         }
 
         &.m--has-body-max-width {
-            .m-dialog__body {
+            .m-modal__body {
                 max-width: $m-max-width--l;
                 margin: 0 auto;
             }
