--- a/src/components/dialog/dialog.sandbox.html
+++ b/src/components/dialog/dialog.sandbox.html
@@ -1,13 +1,13 @@
 <div>
     <h2 class="m-u--no-margin">Width default</h2>
-    <m-temp-name class="m-u--margin-top" title="Titre de la fenêtre">
+    <m-dialog class="m-u--margin-top" title="Titre de la fenêtre">
         <m-button slot="trigger">Ouvrir la fenêtre</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero id!
-    </m-temp-name>
+    </m-dialog>
 
     <h2>Width large</h2>
-    <m-temp-name class="m-u--margin-top" title="Titre de la fenêtre" width="large">
+    <m-dialog class="m-u--margin-top" title="Titre de la fenêtre" width="large">
         <m-button slot="trigger">Ouvrir la fenêtre</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero id!
-    </m-temp-name>
+    </m-dialog>
 </div>
