--- a/src/components/error-page-not-found/error-page-not-found.sandbox.html
+++ b/src/components/error-page-not-found/error-page-not-found.sandbox.html
@@ -29,7 +29,7 @@
 
     <h5>Unexpected error popup</h5>
     <m-button v-m-popup:errorpopup>pop me an error</m-button>
-    <m-temp-name ref="errorpopup" :negativeLink="false" ok-label="Fermer">
+    <m-dialog ref="errorpopup" :negativeLink="false" ok-label="Fermer">
             <m-error-page-not-found ></m-error-page-not-found>
-    </m-temp-name>
+    </m-dialog>
 </div>
