MODUL-503 - Ajuster les styles de l'astérisque des champs requis

--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -222,6 +222,8 @@ $m-input-style--padding: 4px !default;
 
     &__required-marker {
         color: $m-color--accent;
+        font-size: inherit;
+        font-weight: 600;
         margin-left: 2px;
     }
 
