--- a/src/components/limit-text/limit-text.scss
+++ b/src/components/limit-text/limit-text.scss
@@ -1,6 +1,7 @@
 @import '../../styles/abstracts/variables';
 
 .m-limit-text {
+    // https://github.com/ulaval/modul-components/pull/506
     text-size-adjust: 100%;
 
     &__content,
