MODUL-508 - Tooltip - user text get highlighted on click. (firefox only)

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -16,6 +16,7 @@
         align-items: center;
         outline: none;
         min-width: $m-min-width;
+        user-select: none;
 
         @include m-is-ie() {
             display: block;
