utiliser la variable $m-font-weight--black

--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -223,7 +223,7 @@ $m-input-style--padding: 4px !default;
     &__required-marker {
         color: $m-color--accent;
         font-size: inherit;
-        font-weight: 600;
+        font-weight: $m-font-weight--black;
         margin-left: 2px;
     }
 
