MODUL-505 - sandbox css

--- a/src/components/table/table.sandbox.html
+++ b/src/components/table/table.sandbox.html
@@ -1,4 +1,4 @@
-<div style="width: 600px;">
+<div>
     <m-table :rows-max="5" :data="data" :headers="headers">
         <template slot="name" scope="{value}">
             <m-link>{{ value.name }}</m-link>
