--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -25,7 +25,9 @@
               :preload="preload"
               :width="width"
               :background="background"
-              v-if="!isMqMaxS">
+              :lazy="lazy"
+              v-if="!isMqMaxS"
+              @portal-content-mounted="onPortalContentMounted">
         <div slot="trigger"
              v-if="hasTriggerSlot">
             <slot name="trigger"></slot>
@@ -49,7 +51,8 @@
                :trigger="propTrigger"
                :class-name="className"
                :preload="preload"
-               v-if="isMqMaxS">
+               v-if="isMqMaxS"
+               @portal-content-visible="onPortalContentVisible">
         <div slot="trigger"
              v-if="hasTriggerSlot">
             <slot name="trigger"></slot>
