fix dropdown mobile mode

--- a/src/components/popup/popup.html
+++ b/src/components/popup/popup.html
@@ -52,7 +52,8 @@
                :class-name="className"
                :preload="preload"
                v-if="isMqMaxS"
-               @portal-content-visible="onPortalContentVisible">
+               :lazy="lazy"
+               @portal-content-mounted="onPortalContentMounted">
         <div slot="trigger"
              v-if="hasTriggerSlot">
             <slot name="trigger"></slot>
