Implement Hint state in message component

--- a/src/components/message/message.html
+++ b/src/components/message/message.html
@@ -3,6 +3,7 @@
             'm--is-state-information': isStateInformation,
             'm--is-state-warning': isStateWarning,
             'm--is-state-error': isStateError,
+            'm--is-state-hint': isStateHint,
             'm--is-skin-default': isSkinDefault,
             'm--is-skin-light': isSkinLight,
             'm--is-skin-page': isSkinPage,
