Implement Hint state in message-page component

--- a/src/components/message-page/message-page.sandbox.html
+++ b/src/components/message-page/message-page.sandbox.html
@@ -28,6 +28,11 @@
         <m-message-page state="warning" :title="title"></m-message-page>
     </div>
 
+    <br />
+
+    <div style="border: solid 1px black; padding: 10px; width: 600px;">
+        <m-message-page state="hint" :title="title"></m-message-page>
+    </div>
     <hr/>
 
     <h5>with #one hint</h5>
