--- a/src/components/dialog/dialog.html
+++ b/src/components/dialog/dialog.html
@@ -15,7 +15,6 @@
                         <h2>{{ title }}</h2>
                     </header>
                     <div class="m-dialog__body">
-                        <!--Condition to add here for state prop-->
                         <div v-if="type !== 'default'">
                             <m-message class="m-u--margin-top--l" skin="page-light" :state="getState()"></m-message>
                         </div>
@@ -24,25 +23,24 @@
                             <slot></slot>
                         </div>
                         <div v-if="hasHint">
-                            <!--Using error state temporarily for testing purposes-->
-                            <m-message state="error" >{{ hint }}</m-message>
+                            <m-message state="hint" >{{ hint }}</m-message>
                         </div>
                     </div>
                     <footer class="m-dialog__footer">
                         <slot name="footer"></slot>
                         <nav class="m-dialog__footer__nav"
                              v-if="!hasFooterSlot">
-                            <m-button @click="onOk()">
+                            <m-button @click="onPrimaryButton()">
                                 <template v-if="hasOkLabel">{{ okLabel }}</template>
                                 <m-i18n v-else k="m-dialog:ok"></m-i18n>
                                 <template slot="precision" v-if="hasOkPrecision">{{ okPrecision }}</template>
                             </m-button>
-                            <m-button @click="onConditionalOk()" skin="secondary" isRegularSize="true">
+                            <m-button @click="onSecondaryButton()" skin="secondary" isRegularSize="true">
                                 <template v-if="hasCancelLabel">{{ cancelLabel }}</template>
                                 <m-i18n v-else k="m-dialog:close"></m-i18n>
                                 <template slot="precision" v-if="hasCancelPrecision">{{ cancelPrecision }}</template>
                             </m-button>
-                            <m-link mode="button" @click="onCancel()" v-if="negativeLink">
+                            <m-link mode="button" @click="onCancelLink()" v-if="negativeLink">
                                 <template v-if="hasCancelLabel">{{ cancelLabel }}</template>
                                 <m-i18n v-else k="m-dialog:cancel"></m-i18n>
                             </m-link>
