Implement Hint Visual on dialog component

--- a/src/components/dialog/dialog.sandbox.html
+++ b/src/components/dialog/dialog.sandbox.html
@@ -1,5 +1,11 @@
 <div>
     <h2 class="m-u--no-margin">Width default</h2>
+    <m-dialog class="m-u--margin-top" title="Titre de la fenêtre" type="confirmation">
+        <m-button slot="trigger">Ouvrir la fenêtre</m-button>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero id!
+    </m-dialog>
+
+    <h2 class="m-u--no-margin">Width default with hint and negative link</h2>
     <m-dialog class="m-u--margin-top" title="Titre de la fenêtre" negativeLink="true" type="confirmation" hint="Je suis un indice">
         <m-button slot="trigger">Ouvrir la fenêtre</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero id!
@@ -7,6 +13,12 @@
 
     <h2>Width large</h2>
     <m-dialog class="m-u--margin-top" title="Titre de la fenêtre" width="large">
+        <m-button slot="trigger">Ouvrir la fenêtre</m-button>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero id!
+    </m-dialog>
+
+    <h2>Width large with type=info, hint and negative link</h2>
+    <m-dialog class="m-u--margin-top" type="information" title="Titre de la fenêtre" negativeLink="true" width="large" hint="Je suis un gros gros indice">
         <m-button slot="trigger">Ouvrir la fenêtre</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero id!
     </m-dialog>
